--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,9 @@
     background-color: var(--VeryLightGray);
     font-size: 0.9rem; /* 15px to 0.9 rem text*/
     
-    /* flex-direction: column; remove all of this because i need to try grid layout */
     
-    margin: 50px auto;
+    
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -36,7 +36,7 @@
     
     
     width: 50px;
-   /* maybe ill use a padding to move it down  padding-top: 30px; */
+   /* ill use a padding to move it down  padding-top: 30px; */
     float: right;
     padding-top: 20px;
   }
@@ -86,11 +86,7 @@
     font-weight: 200;
   }
 
-  .container {
-    border: 2px solid red;
 
-
-  }
 
   .hero {
     /* border: 3px solid blue; */
@@ -118,8 +114,8 @@
     
     box-shadow: 1px 4px 20px rgb(219, 218, 218);
     background-color: white;
-    padding: 20px;
-    margin-bottom: 20px;
+    padding: 30px;
+    margin-bottom: 30px;
    
   }
 
@@ -131,8 +127,8 @@
     box-shadow: 1px 4px 20px rgb(219, 218, 218);
     background-color: white;
    
-    padding: 20px;
-    margin-bottom: 20px;
+    padding: 30px;
+    margin-bottom: 30px;
   }
 
 
@@ -144,8 +140,8 @@
     box-shadow: 1px 4px 20px rgb(219, 218, 218);
     background-color: white;
 
-    padding: 20px;
-    margin-bottom: 20px;
+    padding: 30px;
+    margin-bottom: 30px;
   }
 
   .card-feature-four {
@@ -157,13 +153,13 @@
     background-color: white;
     
     padding: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
 
   @media (min-width:650px) {
     
     body {
-      margin: 0 auto;
+      
       
       min-height: 100vh;
       
@@ -171,7 +167,7 @@
 
     h3 {
       font-size: 1.9rem;
-      line-height: 150%;
+      line-height: 45px;
       
       
 
@@ -186,7 +182,7 @@
     }
     .cards {
       display: grid;
-      grid-template-rows: 100px 100px 100px 100px;
+      grid-template-rows: 120px 120px 120px 120px;
       grid-template-columns: 1fr 1fr 1fr;
       
       /*  grid-template-areas: 
